# MLOps-world-demo

./: .gitignore  .gitmodules  01- data.ipynb  02-spark.ipynb  03-feast-cloud.ipynb  03-feast-local.ipynb  README.md  pyproject.toml  start_demo_cloud.sh  start_demo_local.sh
data/: driver_stats.parquet
feature_repo_cloud/: feature_store.yaml
feature_repo_local/: example.py  feature_store.yaml
