
[tool.poetry]
name = "pyspark-demo"
version = "0.1.0"
description = ""
authors = ["DvirDukhan <dvir@redis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"
jupyterlab = "^3.4.2"
feast = "^0.21.2"
redis = "^4.3.2"
hiredis = "^2.0.0"
kafka-python = "^2.0.2"
pandas = "^1.4.2"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
